--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@types/react-dom": "^18.2.7",
     "bootstrap": "^5.3.1",
     "dayjs": "^1.11.9",
+    "primereact": "^9.6.2",
     "react": "^18.2.0",
     "react-bootstrap": "^2.8.0",
     "react-date-picker": "^10.5.0",
